--- a/Ctype/TestAPI.ipynb
+++ b/Ctype/TestAPI.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data_test = c_int(100)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "100\n"
+     ]
+    }
+   ],
+   "source": [
+    "print (data_test.value)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +53,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<CDLL './libtest.so', handle 7ff790687810 at 0x10eca30d0>\n"
+     ]
+    }
+   ],
+   "source": [
+    "print (x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,13 +79,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
-     "text": "-828951664\n1939002605\n1858727534\n"
+     "text": [
+      "1252330490\n",
+      "1457814056\n",
+      "966921452\n"
+     ]
     }
    ],
    "source": [
@@ -52,23 +99,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
-    "y = CDLL(\"/Users/linbinyang/Desktop/Ctype/TEST/libmath.so\")"
+    "y = CDLL(\"/Users/linbinyang/Desktop/CGBN_matrix/Ctype/TEST/libmath.so\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/plain": "5"
+      "text/plain": [
+       "5"
+      ]
      },
-     "execution_count": 7,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -79,14 +128,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/plain": "10.100000381469727"
+      "text/plain": [
+       "10.100000381469727"
+      ]
      },
-     "execution_count": 9,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -105,7 +156,9 @@
     {
      "name": "stdout",
      "output_type": "stream",
-     "text": "15.0\n"
+     "text": [
+      "15.0\n"
+     ]
     }
    ],
    "source": [
@@ -119,13 +172,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
-     "text": "18.0\nc_float(18.0)\n"
+     "text": [
+      "18.0\n",
+      "c_float(18.0)\n"
+     ]
     }
    ],
    "source": [
@@ -142,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -154,13 +210,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
-     "text": "-2\n5\n8\n"
+     "text": [
+      "-2\n",
+      "5\n",
+      "8\n"
+     ]
     }
    ],
    "source": [
@@ -172,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -181,14 +241,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/plain": "array([ 0,  5, -1], dtype=int32)"
+      "text/plain": [
+       "array([ 0,  5, -1], dtype=int32)"
+      ]
      },
-     "execution_count": 25,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -209,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -218,14 +280,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/plain": "12347981237489237489326798"
+      "text/plain": [
+       "12347981237489237489326798"
+      ]
      },
-     "execution_count": 30,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -236,7 +300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -245,7 +309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -254,24 +318,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
-     "text": "<class 'mpz'>\n"
+     "text": [
+      "<class 'mpz'>\n"
+     ]
     }
    ],
    "source": [
     "print (type(value))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "name": "python37564bittensorflowconda8c1cc858d65746e7a7e4b3d5ce52fe17",
-   "display_name": "Python 3.7.5 64-bit ('tensorflow': conda)"
+   "display_name": "Python 3.7.5 64-bit ('tensorflow': conda)",
+   "language": "python",
+   "name": "python37564bittensorflowconda8c1cc858d65746e7a7e4b3d5ce52fe17"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.7.5"
   }
  },
  "nbformat": 4,
